--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2B6D9ZBM1G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2B6D9ZBM1G');
+</script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/Logo_Racime_V2-sf.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
