changement du tag analytics

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>Portfolio Racime</title>
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2B6D9ZBM1G"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T744FMLRYS"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
