modif tag analytics fonctionnel

--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
 
     <title>Portfolio Racime</title>
 
-    <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T744FMLRYS"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag('config', 'G-2B6D9ZBM1G');
-    </script>
+  gtag('config', 'G-T744FMLRYS');
+</script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
